@@ -1555,13 +1555,24 @@ name|targetImpl
 operator|==
 literal|null
 condition|)
+block|{
 throw|throw
 operator|new
 name|IllegalArgumentException
 argument_list|(
-literal|"State contains an AttributeImpl that is not in this AttributeSource"
+literal|"State contains AttributeImpl of type "
+operator|+
+name|state
+operator|.
+name|attribute
+operator|.
+name|getClass
+argument_list|()
+operator|+
+literal|" that is not in in this AttributeSource"
 argument_list|)
 throw|;
+block|}
 name|state
 operator|.
 name|attribute
@@ -1946,13 +1957,14 @@ name|toString
 argument_list|()
 return|;
 block|}
-comment|/**    * Performs a clone of all {@link AttributeImpl} instances returned in a new    * AttributeSource instance. This method can be used to e.g. create another TokenStream    * with exactly the same attributes (using {@link #AttributeSource(AttributeSource)})    */
+comment|/**    * Performs a clone of all {@link AttributeImpl} instances returned in a new    * {@code AttributeSource} instance. This method can be used to e.g. create another TokenStream    * with exactly the same attributes (using {@link #AttributeSource(AttributeSource)}).    * You can also use it as a (non-performant) replacement for {@link #captureState}, if you need to look    * into / modify the captured state.    */
 DECL|method|cloneAttributes
 specifier|public
 name|AttributeSource
 name|cloneAttributes
 parameter_list|()
 block|{
+specifier|final
 name|AttributeSource
 name|clone
 init|=
@@ -1964,13 +1976,13 @@ operator|.
 name|factory
 argument_list|)
 decl_stmt|;
-comment|// first clone the impls
 if|if
 condition|(
 name|hasAttributes
 argument_list|()
 condition|)
 block|{
+comment|// first clone the impls
 if|if
 condition|(
 name|currentState
@@ -2025,7 +2037,6 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
-block|}
 comment|// now the interfaces
 for|for
 control|(
@@ -2078,9 +2089,110 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+block|}
 return|return
 name|clone
 return|;
+block|}
+comment|/**    * Copies the contents of this {@code AttributeSource} to the given target {@code AttributeSource}.    * The given instance has to provide all {@link Attribute}s this instance contains.     * The actual attribute implementations must be identical in both {@code AttributeSource} instances;    * ideally both AttributeSource instances should use the same {@link AttributeFactory}.    * You can use this method as a replacement for {@link #restoreState}, if you use    * {@link #cloneAttributes} instead of {@link #captureState}.    */
+DECL|method|copyTo
+specifier|public
+specifier|final
+name|void
+name|copyTo
+parameter_list|(
+name|AttributeSource
+name|target
+parameter_list|)
+block|{
+if|if
+condition|(
+name|hasAttributes
+argument_list|()
+condition|)
+block|{
+if|if
+condition|(
+name|currentState
+operator|==
+literal|null
+condition|)
+block|{
+name|computeCurrentState
+argument_list|()
+expr_stmt|;
+block|}
+for|for
+control|(
+name|State
+name|state
+init|=
+name|currentState
+init|;
+name|state
+operator|!=
+literal|null
+condition|;
+name|state
+operator|=
+name|state
+operator|.
+name|next
+control|)
+block|{
+specifier|final
+name|AttributeImpl
+name|targetImpl
+init|=
+name|target
+operator|.
+name|attributeImpls
+operator|.
+name|get
+argument_list|(
+name|state
+operator|.
+name|attribute
+operator|.
+name|getClass
+argument_list|()
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|targetImpl
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"This AttributeSource contains AttributeImpl of type "
+operator|+
+name|state
+operator|.
+name|attribute
+operator|.
+name|getClass
+argument_list|()
+operator|+
+literal|" that is not in the target"
+argument_list|)
+throw|;
+block|}
+name|state
+operator|.
+name|attribute
+operator|.
+name|copyTo
+argument_list|(
+name|targetImpl
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 block|}
 end_class
